prevent double scrollbar when we have a modal larger than the viewport

--- a/view/theme/redbasic/css/style.css
+++ b/view/theme/redbasic/css/style.css
@@ -9,7 +9,6 @@
 /* generals */
 html {
 	font-size: 100%;
-	overflow-x: hidden;
 }
 
 body {
